# discovery

microbit/src/03-setup/: verify.md
microbit/src/05-led-roulette/: Embed.toml
microbit/src/05-led-roulette/src/: main.rs
microbit/src/07-uart/: Cargo.toml
microbit/src/07-uart/src/: main.rs
microbit/src/08-i2c/: Cargo.toml
nrf52840dk/03-setup/: Embed.toml  linux.md  verify.md
nrf52840dk/05-led-roulette/: Cargo.toml
nrf52840dk/05-led-roulette/src/: main.rs
nrf52840dk/07-uart/: Cargo.toml
nrf52840dk/08-i2c/: Cargo.toml
nrf52840dk/08-i2c/src/: main.rs
